--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -19,11 +19,11 @@
 }
 
 @utility decorative-text {
-  @apply bg-display-text bg-clip-text font-display text-[132px] font-normal leading-none tracking-[-0.02em] text-transparent whitespace-nowrap sm:text-[200px] lg:text-[330px] lg:tracking-[-0.02em];
+  @apply bg-display-text bg-clip-text font-display text-[132px] font-normal leading-none tracking-[-0.02em] text-transparent whitespace-nowrap sm:text-[200px] lg:text-[20vw] lg:tracking-[-0.02em];
 }
 
-@utility noise-overlay {
-  @apply pointer-events-none absolute inset-0 z-0 bg-noise bg-repeat opacity-30 mix-blend-overlay;
+@utility noisy {
+  @apply size-full bg-[url("./src/assets/images/noisy.png")];
 }
 
 @utility focus-ring {
@@ -37,6 +37,15 @@
   color: transparent;
 }
 
+@utility radial-gradient {
+  background: radial-gradient(
+    circle at center,
+    #434343 0%,
+    #000 50%,
+    transparent 100%
+  );
+}
+
 @utility video {
-  @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 object-cover object-[55%_100%] md:object-contain md:object-[56%_100%];
+  @apply w-full md:h-[80%] h-1/2 absolute bottom-0 left-0 object-cover object-[50%_100%] md:object-contain md:object-[56%_100%];
 }
